--- a/shopping.html
+++ b/shopping.html
@@ -10,5 +10,6 @@
 <div><input min = "1"></input></div>
 <div><input min = "1"></input></div>
 <div><input min = "1"></input></div>
+<div><input min = "1"></input></div>
 </body>
 </html>
