CSSを作った、インプットを1つにした

--- a/shopping.html
+++ b/shopping.html
@@ -5,10 +5,6 @@
   <title></title>
 </head>
 <body>
-<div><input min = "1"></input></div>
-<div><input min = "1"></input></div>
-<div><input min = "1"></input></div>
-<div><input min = "1"></input></div>
-<div><input min = "1"></input></div>
+<input min = "1">
 </body>
 </html>
