買い物リストの大枠を作った (11/25) byまーちょ

--- a/shopping.html
+++ b/shopping.html
@@ -2,9 +2,83 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Shopping</title>
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
+
 <body>
-<input min = "1">
+<header>
+  <div class="header-container">
+<p class="shopping-title">買い物リスト</p>
+</div>
+</header>
+
+<main>
+  <div class="main-container">
+    <div class="list">
+    <div class="item">
+      <input type="text"/>
+    </div>
+    <div class="price">
+      <input type="text"/>
+      <p>円</p>
+    </div>
+    <div class="tax">
+      <input type="radio" name="tax1" value="8%"/> 8%
+      <input type="radio" name="tax1" value="10%"/> 10%
+    </div>
+  </div>
+  <div class="list">
+    <div class="item">
+      <input type="text"/>
+    </div>
+    <div class="price">
+      <input type="text"/>
+      <p>円</p>
+    </div>
+    <div class="tax">
+      <input type="radio" name="tax2" value="8%"/> 8%
+      <input type="radio" name="tax2" value="10%"/> 10%
+    </div>
+  </div>
+  <div class="list">
+    <div class="item">
+      <input type="text"/>
+    </div>
+    <div class="price">
+      <input type="text"/>
+      <p>円</p>
+    </div>
+    <div class="tax">
+      <input type="radio" name="tax3" value="8%"/> 8%
+      <input type="radio" name="tax3" value="10%"/> 10%
+    </div>
+  </div>
+  <div class="list">
+    <div class="item">
+      <input type="text"/>
+    </div>
+    <div class="price">
+      <input type="text"/>
+      <p>円</p>
+    </div>
+    <div class="tax">
+      <input type="radio" name="tax4" value="8%"/> 8%
+      <input type="radio" name="tax4" value="10%"/> 10%
+    </div>
+
+  <div class="btn plus">
+    <span class="plus-icon"></span>
+  </div>
+</div>
+</div>
+</main>
+
+<footer>
+  <div class="footer-container">
+    <p>合計</p>
+  </div>
+</footer>
 </body>
+
 </html>
