--- a/tausho/shopping.html
+++ b/tausho/shopping.html
@@ -8,24 +8,28 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         お買い物リスト
-    </div>
+    </header>
 
     <div class="body">
-        <table>
+        <table id="table">
             <tr>
+                <th></th>
                 <th>商品名</th>
                 <th>税抜価格</th>
                 <th>税率</th>
                 <th>税込価格</th>
             </tr>
             <tr>
-                <td><input type="text"></td>
                 <td>
-                    <form id="Calcurate" oninput="result.value = Number(price.value)">
-                        <input type="number" name="price" min="1">円
-                    </form>
+                    <button type="button" onclick="rowdel(this)">削除</button>
+                </td>
+                <td>
+                    <input type="text">
+                </td>
+                <td>
+                    <input type="number" name="price" min="1">円
                 </td>
                 <td>
                     <input type="radio" name="tax-form1"> 8%
@@ -35,12 +39,43 @@
                     <output name="calcResult" form="Calcurate">0</output>円
                 </td>
             </tr>
+            
         </table>
+        <button class = "add-row" type="button" onclick="rowadd()">追加</button>
     </div>
 
     <div class="footer">
         合計
     </div>
+
+    <script>
+        function rowadd() {
+            var table = document.getElementById("table");
+            // 行数を取得
+            var rows = table.rows.length;
+            // 行を行末に追加
+            var row = table.insertRow(-1);
+            //td分追加
+            var cell1 = row.insertCell(-1);
+            var cell2 = row.insertCell(-1);
+            var cell3 = row.insertCell(-1);
+            var cell4 = row.insertCell(-1);
+            var cell5 = row.insertCell(-1);
+            // セルの内容入力
+            cell1.innerHTML = `<button type="button" onclick="rowdel(this)">削除</button>`;
+            cell2.innerHTML = `<input type="text">`;
+            cell3.innerHTML = `<input type="number" name="price" min="1">円`;
+            cell4.innerHTML = `<input type="radio" name="tax-form${rows}"> 8%<input type="radio" name="tax-form${rows}"> 10%`;
+            cell5.innerHTML = `<output name="calcResult" form="Calcurate">0</output>円`;
+
+        }
+        function rowdel(obj) {
+            // 削除ボタンを押下された行を取得
+            tr = obj.parentNode.parentNode;
+            // trのインデックスを取得して行を削除する
+            tr.parentNode.deleteRow(tr.sectionRowIndex);
+        }
+    </script>
 </body>
 
 </html>
