--- a/tausho/shopping.html
+++ b/tausho/shopping.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Shopping Tausho</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
@@ -12,7 +13,7 @@
         お買い物リスト
     </header>
 
-    <div class="body">
+    <div class="body" id="app">
         <table id="table">
             <tr>
                 <th></th>
@@ -41,7 +42,7 @@
             </tr>
 
         </table>
-        <button class="add-row" type="button" onclick="rowadd()">追加</button>
+        <button class="add-row" type="button" v-on:click="rowaddVue">追加 {{message}} {{count}}</button>
     </div>
 
     <div class="footer">
@@ -49,6 +50,22 @@
     </div>
 
     <script>
+        const HelloVueApp = {
+            data() {
+                return {
+                    message: 'Hello Vue.js!',
+                    count: 0,
+                }
+            },
+            methods: {
+                rowaddVue() {
+                    console.log('rowaddVue');
+                    this.count++;
+                    rowadd();
+                },
+            }
+        }
+        Vue.createApp(HelloVueApp).mount('#app');
 
         const priceCalc = (obj) => {
             //選択した行数を取得
