--- a/macho/shopping.html
+++ b/macho/shopping.html
@@ -5,27 +5,43 @@
   <meta charset="utf-8">
   <title>Shopping</title>
   <link rel="stylesheet" href="stylesheet.css">
+  <link rel="responsive" href="responsive.css">
 </head>
 
 <body>
   <header>
-    <ul>
-      <li>編集</li>
-      <li>買い物リスト</li>
-    </ul>
+    <h1>買い物リスト</h1>
   </header>
 
   <main>
-    <ul>
-      <li><input type="text"></li>
-      <li>
-        <input type="text">円
-      </li>
-      <li>
-        <input type="radio" name="tax1">8%
-        <input type="radio" name="tax1">10%
-      </li>
-    </ul>
+    <div class="container">
+      <div class="title">
+        <ul>
+          <li>商品名</li>
+          <li>税抜価格</li>
+          <li>税率</li>
+          <li>税込価格</li>
+        </ul>
+      </div>
+      <div class="form">
+        <ul>
+          <li><input type="text"></li>
+          <li>
+            <input type="text"><span>円</span>
+          </li>
+          <li>
+            <input type="radio" name="tax1">8%
+            <input type="radio" name="tax1">10%
+          </li>
+          <li>
+            <input type="text"><span>円</span>
+          </li>
+        </ul>
+      </div>
+      <input type="submit" value="+" class="btn pls">
+
+
+    </div>
   </main>
   <footer>
 
