スマホ用レスポンシブデザイン作成

--- a/macho/shopping.html
+++ b/macho/shopping.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>Shopping</title>
   <link rel="stylesheet" href="stylesheet.css">
-  <link rel="responsive" href="responsive.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -30,8 +31,8 @@
             <input type="text"><span>円</span>
           </li>
           <li>
-            <input type="radio" name="tax1">8%
-            <input type="radio" name="tax1">10%
+            <input type="radio" name="tax">8%
+            <input type="radio" name="tax">10%
           </li>
           <li>
             <input type="text"><span>円</span>
@@ -39,12 +40,12 @@
         </ul>
       </div>
       <input type="submit" value="+" class="btn pls">
-
-
     </div>
   </main>
   <footer>
-
+    <ul>
+      <li>合計</li>
+    </ul>
   </footer>
 </body>
 
