--- a/macho/shopping.html
+++ b/macho/shopping.html
@@ -31,8 +31,8 @@
             <input type="text"><span>円</span>
           </li>
           <li>
-            <input type="radio" name="tax">8%
-            <input type="radio" name="tax">10%
+            <input type="radio" name="tax"><span>8%</span>
+            <input type="radio" name="tax"><span>10%</span>
           </li>
           <li>
             <input type="text"><span>円</span>
