HTMLとjs一応完成、ちゃんと動く

--- a/tausho/shopping.html
+++ b/tausho/shopping.html
@@ -12,7 +12,7 @@
         お買い物リスト
     </header>
 
-    <div class="body">
+    <div class="content">
         <table id="table">
             <tr>
                 <th></th>
@@ -29,50 +29,34 @@
                     <input type="text">
                 </td>
                 <td>
-                    <input type="number" value="0" id="price1" min="1" onfocus="priceCalc(this)" onkeyup="priceCalc(this)">円
+                    <input type="number" value="0" min="0" id="price-0" class="price"
+                        onkeyup="priceCalc(this.id);sumCalc()">円
                 </td>
                 <td>
-                    <input type="radio" id = "tax-rate1" name="tax-form1" checked="checked" onclick="priceCalc(this)"> 8%
-                    <input type="radio" name="tax-form1" onclick="priceCalc(this)"> 10%
+                    <input type="radio" id="tax-rate1-0" name="tax-form-0" checked="checked"
+                        onclick="priceCalc(this.id);sumCalc()"> 8%
+                    <input type="radio" id="tax-rate2-0" name="tax-form-0" onclick="priceCalc(this.id);sumCalc()"> 10%
                 </td>
                 <td>
-                    <span id="ans1">0</span>円
+                    <span id="ans-0" class="priceIncludingTax">0</span>円
                 </td>
             </tr>
-
         </table>
         <button class="add-row" type="button" onclick="rowadd()">追加</button>
-    </div>
-
-    <div class="footer">
-        合計
+        <p>
+            合計(税抜):<span id="sumNotIncludingTax">0</span>円、合計(税込):<span id="sumIncludingTax">0</span>円
+        </p>
     </div>
 
     <script>
-
-        const priceCalc = (obj) => {
-            //選択した行数を取得
-            var rows = obj.parentNode.parentNode.rowIndex
-            //その行の税抜き価格を取得
-            var price = document.getElementById(`price${rows}`).value;
-            //税率
-            var taxRate;
-            var element = document.getElementById(`tax-rate${rows}`) ;
-
-            if(element.checked){
-                taxRate = 1.08;
-
-            }else{
-                taxRate = 1.1;
-            }
-            //税込価格を計算し、出力
-            document.getElementById(`ans${rows}`).innerHTML = price * taxRate;
-        }
+        //追加ボタンを押された回数を保存
+        var addRowCount = 0;
 
         const rowadd = () => {
+            //追加ボタンを押された回数をインクリメント
+            addRowCount++;
+            //テーブルを取得
             var table = document.getElementById("table");
-            // 行数を取得
-            var rows = table.rows.length;
             // 行を行末に追加
             var row = table.insertRow(-1);
             //td分追加
@@ -84,16 +68,61 @@
             // セルの内容入力
             cell1.innerHTML = `<button type="button" onclick="rowdel(this)">削除</button>`;
             cell2.innerHTML = `<input type="text">`;
-            cell3.innerHTML = `<input type="number" value="0" id="price${rows}" min="1" onfocus="priceCalc(this)" onkeyup="priceCalc(this)">円`;
-            cell4.innerHTML = `<input type="radio" id = tax-rate${rows} name="tax-form${rows}" checked="checked" onclick="priceCalc(this)"> 8%<input type="radio" name="tax-form${rows}" onclick="priceCalc(this)"> 10%`;
-            cell5.innerHTML = `<span id="ans${rows}">0</span>円`;
+            cell3.innerHTML = `<input type="number" value="0" min="0" id="price-${addRowCount}" class="price" onkeyup="priceCalc(this.id);sumCalc()">円`;
+            cell4.innerHTML = `<input type="radio" id="tax-rate1-${addRowCount}" name="tax-form-${addRowCount}" checked="checked" onclick="priceCalc(this.id);sumCalc()"> 8%<input type="radio" id="tax-rate2-${addRowCount}" name="tax-form-${addRowCount}" onclick="priceCalc(this.id);sumCalc()"> 10%`;
+            cell5.innerHTML = `<span id="ans-${addRowCount}" class="priceIncludingTax">0</span>円`;
 
         }
+
         const rowdel = (obj) => {
             // 削除ボタンを押下された行を取得
             tr = obj.parentNode.parentNode;
             // trのインデックスを取得して行を削除する
             tr.parentNode.deleteRow(tr.sectionRowIndex);
+            //合計値を再計算
+            sumCalc();
+        }
+
+        const priceCalc = (id) => {
+            //idの数字を取得
+            id = id.substring(id.lastIndexOf('-') + 1);
+            //税抜き価格を取得
+            var price = document.getElementById(`price-${id}`).value;
+            //税率
+            var taxRate;
+            var element = document.getElementById(`tax-rate1-${id}`);
+
+            //税込価格を計算
+            if (element.checked) {
+                taxRate = 1.08;
+
+            } else {
+                taxRate = 1.1;
+            }
+            //誤差を考慮して税込価格を計算し、出力
+            document.getElementById(`ans-${id}`).innerHTML = Math.round((price * taxRate * 100)) / 100;
+        }
+
+
+        const sumCalc = () => {
+            //クラスがpriceのものを全て取得
+            var prices = document.getElementsByClassName('price');
+            //クラスがpriceIncludingTaxのものを全て取得
+            var pricesIncludingTax = document.getElementsByClassName('priceIncludingTax');
+
+            var sumNotIncludingTax = 0;
+            var sumIncludingTax = 0;
+            //合計を求めて
+            for (var i = 0; i < prices.length; i++) {
+                if (!prices[i].value == "") {
+                    sumNotIncludingTax += parseInt(prices[i].value);
+                }
+                sumIncludingTax += parseFloat(pricesIncludingTax[i].innerHTML);
+                sumIncludingTax = Math.round(sumIncludingTax*100)/100;
+            }
+            //出力
+            document.getElementById(`sumNotIncludingTax`).innerHTML = sumNotIncludingTax;
+            document.getElementById(`sumIncludingTax`).innerHTML = sumIncludingTax;
         }
     </script>
 </body>
