--- a/tausho/shopping.html
+++ b/tausho/shopping.html
@@ -17,27 +17,27 @@
         <table id="table">
             <tr>
                 <th></th>
-                <th>商品名</th>
+                <th>商品名{{items}}</th>
                 <th>税抜価格</th>
                 <th>税率</th>
                 <th>税込価格</th>
             </tr>
-            <tr>
+            <tr v-for="(item, i) in items">
                 <td>
-                    <button type="button" onclick="rowdel(this)">削除</button>
+                    <button type="button" v-on:click="rowdel(i)">削除{{item.price}}</button>
                 </td>
                 <td>
                     <input type="text">
                 </td>
                 <td>
-                    <input type="number" value="0" id="price1" min="1" onfocus="priceCalc(this)" onkeyup="priceCalc(this)">円
+                    <input type="number" :value="item.price" min="1">円
                 </td>
                 <td>
                     <input type="radio" id = "tax-rate1" name="tax-form1" checked="checked" onclick="priceCalc(this)"> 8%
                     <input type="radio" name="tax-form1" onclick="priceCalc(this)"> 10%
                 </td>
                 <td>
-                    <span id="ans1">0</span>円
+                    <span id="ans1">{{item.price + count}}</span>円
                 </td>
             </tr>
 
@@ -55,15 +55,23 @@
                 return {
                     message: 'Hello Vue.js!',
                     count: 0,
+                    items: [],
                 }
             },
             methods: {
                 rowaddVue() {
                     console.log('rowaddVue');
                     this.count++;
-                    rowadd();
+                    this.items.push({
+                        price: 120,
+                        tax: 0,
+                    });
                 },
-            }
+                rowdel(i) {
+                    console.log('rowdel')
+                    this.items.splice(i, 1);
+                }
+            },
         }
         Vue.createApp(HelloVueApp).mount('#app');
 
@@ -86,32 +94,12 @@
             document.getElementById(`ans${rows}`).innerHTML = price * taxRate;
         }
 
-        const rowadd = () => {
-            var table = document.getElementById("table");
-            // 行数を取得
-            var rows = table.rows.length;
-            // 行を行末に追加
-            var row = table.insertRow(-1);
-            //td分追加
-            var cell1 = row.insertCell(-1);
-            var cell2 = row.insertCell(-1);
-            var cell3 = row.insertCell(-1);
-            var cell4 = row.insertCell(-1);
-            var cell5 = row.insertCell(-1);
-            // セルの内容入力
-            cell1.innerHTML = `<button type="button" onclick="rowdel(this)">削除</button>`;
-            cell2.innerHTML = `<input type="text">`;
-            cell3.innerHTML = `<input type="number" value="0" id="price${rows}" min="1" onfocus="priceCalc(this)" onkeyup="priceCalc(this)">円`;
-            cell4.innerHTML = `<input type="radio" id = tax-rate${rows} name="tax-form${rows}" checked="checked" onclick="priceCalc(this)"> 8%<input type="radio" name="tax-form${rows}" onclick="priceCalc(this)"> 10%`;
-            cell5.innerHTML = `<span id="ans${rows}">0</span>円`;
-
-        }
-        const rowdel = (obj) => {
-            // 削除ボタンを押下された行を取得
-            tr = obj.parentNode.parentNode;
-            // trのインデックスを取得して行を削除する
-            tr.parentNode.deleteRow(tr.sectionRowIndex);
-        }
+        // const rowdel = (obj) => {
+        //     // 削除ボタンを押下された行を取得
+        //     tr = obj.parentNode.parentNode;
+        //     // trのインデックスを取得して行を削除する
+        //     tr.parentNode.deleteRow(tr.sectionRowIndex);
+        // }
     </script>
 </body>
 
